<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_tasks"
            android:icon="@drawable/ic_task_dark"
            android:title="@string/my_tasks" />
        <item
            android:id="@+id/daily_routine"
            android:icon="@drawable/ic_daily_routine"
            android:title="@string/daily_routine" />
        <item
            android:id="@+id/habits"
            android:icon="@drawable/ic_habit"
            android:title="@string/habits" />
        <item
            android:id="@+id/events"
            android:icon="@drawable/ic_event_dark"
            android:title="@string/events" />
        <item
            android:id="@+id/to_buy_list"
            android:icon="@drawable/ic_buy"
            android:title="@string/to_buy_list_menu" />
        <item
            android:id="@+id/progress"
            android:icon="@drawable/ic_habit"
            android:title="@string/progress_menu" />
    </group>


</menu>
