<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/appwidget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_margin="8dp"
        android:background="@color/colorAccent"
        android:contentDescription="@string/pinned_task"
        android:text="@string/appwidget_text"
        android:textColor="@color/text_color"
        android:textSize="24sp" />

    <ImageView
        android:contentDescription="@string/add_new_task"
        android:id="@+id/add_new_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:src="@drawable/ic_add" />

</RelativeLayout>